<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/abouttoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbarback">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="ABOUT US"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/aboutscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abouttoolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.2"
                    android:scaleType="fitXY"
                    android:src="@drawable/about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:text="@string/aboutmaintext"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/tree" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/prefoundation"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/foundation"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/foundation" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/medical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/medical"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/competitive"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="320dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/competion" />


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>